momentuHMM 1.5.0 2019-08-21
-----------------
NEW FEATURES

* hierarchical HMMs can now be fitted and simulated using the fitHMM, MIfitHMM, and simHierData functions

* discrete individual-level random effects now available on state transition probabilities via the 'mixtures' and 'formulaPi' arguments in fitHMM, MIfitHMM, simData, and simHierData

* discrete-time version of Hooten et al (2019; <doi:10.1111/ele.13198>) recharge model has been added

* 'mvnorm2' (bivariate normal) and 'mvnorm3' (trivariate normal) data stream distributions have been added

* 'rw_norm' (normal random walk), 'rw_mvnorm2' (bivariate normal random walk), and 'rw_mvnorm3' (trivariate normal random walk) data stream distributions have been added

* 'cat' (categorical) data stream distributions have been added

* circularAngleMean can now alternatively be used to specify the reference angle (i.e. directional persistence) coefficient in circular-circular regression models

* added getTrProbs function for calculating transition probabilities


momentuHMM 1.4.3 2018-11-21
-----------------
NEW FEATURES

* betaCons argument added to fitHMM and MIfitHMM for specifying equality constraints on transition probability matrix parameters

* betaRef argument added to fitHMM and MIfitHMM for specifying the reference states for t.p.m. multinomial logit link

* retryParallel argument added to crawlWrap

CHANGES

* updated for compatibility with crawl (>= 2.2.1); notable changes include removal of the initial.state argument and addition of the time.scale argument in crawlWrap.

* changed how fixPar and betaCons are handled when optimizing the likelihood; this should make optimization faster and more stable when these parameter constraints are used

* formulaDelta=NULL now default in fitHMM, MIfitHMM, and simData

* %dorng% now used instead of %dopar%, thereby allowing for reproducible foreach loops when using parallel processing

* cleaned up crawlWrap printing when retryFits>0 and retryParallel=FALSE
