@@ -2,7 +2,7 @@ Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
 Version: 1.5.0
-Date: 2019-08-21
+Date: 2019-08-25
 Depends:
     R (>= 2.10)
 Author: Brett McClintock, Theo Michelot
